bio overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   background-color: #fafafa;
   margin: 0;
+  overflow-x: hidden;
 }
 
 button {
@@ -58,6 +59,7 @@ nav {
 
 .container {
   padding: 0 15%;
+  
 }
 
 .bio {
@@ -104,11 +106,13 @@ nav {
   font-size: 1.7em;
   color: #545454;
   margin-bottom: 0;
+  overflow-x: hidden;
 }
 
 .profile-info .about {
   font-size: 1.2em;
   color: #545454;
+  overflow-x: hidden;
 }
 
 .profile-info button {
@@ -142,6 +146,7 @@ nav {
 
 #addPhotoInput {
   display: none;
+  
 }
 
 .add-photo-button {
@@ -150,6 +155,7 @@ nav {
   bottom: 5em;
   right: 7em;
   cursor: pointer;
+  overflow-x: hidden;
 }
 
 .gallery {
@@ -202,33 +208,35 @@ nav {
 @media screen and (max-width: 600px) {
   .container {
     padding: 0 5%;
-    height:100vh;
+    height: 100vh;
   }
 
   nav {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     text-align: center;
-    width:100vw;
-    height:auto;
-    padding:2vh 1%;
-    overflow:hidden;
-  }
+    width: 100vw;
+    height: auto;
+    padding: 2vh 1%;
+   }
 
   .nav-links {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
     margin-top: 0.5em;
+
   }
 
   .search {
     margin: 0.5em auto;
     width: 80%;
+    overflow: hidden;
   }
 
-  .bio{
-   width:90vw;
-   height:auto; 
+  .bio {
+    width: 68vw;
+    height: auto;
+    
   }
 
   .profile-photo {
@@ -236,9 +244,8 @@ nav {
     height: 3.5em;
     margin-top: 2em;
     margin-right: 2em;
-    margin-left:-69%;
+    margin-left: -69%;
   }
-
 
   .profile-photo img {
     width: 100%;
@@ -246,18 +253,18 @@ nav {
     object-fit: cover;
     border-radius: 50%;
     cursor: pointer;
-    
   }
 
   .profile-photo img:hover {
     opacity: 0.7;
   }
 
-  .profile-info{
-    margin-right:20vw;
+  .profile-info {
+    margin-right: 20vw;
     padding: 0 13% 0 0;
-    width:55vw;
-    margin-left: -28vw;
+    width: 55vw;
+    margin-left: -20vw;
+    overflow: hidden;
   }
 
   .profile-info .name {
@@ -275,7 +282,7 @@ nav {
     background-color: #0095f6;
     color: #fff;
     font-size: 1.02em;
-    width: 5em; 
+    width: 5em;
     height: 1.8em;
   }
 
@@ -283,11 +290,10 @@ nav {
     background-color: #0081d6;
   }
 
-  .edit-bio-form{
-    width:80vw;
-    text-align:start;
-    margin-left:-16vw;
-
+  .edit-bio-form {
+    width: 80vw;
+    text-align: start;
+    margin-left: -16vw;
   }
 
   .edit-bio-form input {
@@ -309,30 +315,26 @@ nav {
 
   .add-photo-button {
     transform: scale(2);
-    position:fixed;
-    margin-right: -2em;  
+    position: fixed;
+    margin-right: -5em;
   }
 
-  .gallery{
+  .gallery {
     grid-template-columns: 1fr;
-    padding-left: 3%; 
-    overflow-x: hidden;
-    
+    padding-left: 3%;
   }
 
-  .item{
+  .item {
     height: 11em;
     width: 11em;
-    
   }
 
   .delete-button {
-    margin-left: -8em;
+    margin-left: max(-8em);
     margin-top: 6em;
     transform: scale(1.2);
   }
 }
-
 @media screen and (min-width: 601px) and  (max-width: 900px) {
   .container {
     padding: 0 5%;
